Archive2/25/220e93c90b119a/output
main.cpp: In function 'int main()':
main.cpp:19:7: error: 'fsdfsdfsdf' was not declared in this scope
     };fsdfsdfsdf
       ^
